--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 // index.astro
 import { sanity } from '../lib/sanity'
 
+// Query: Site settings singleton with all global content
 const settingsQuery = `
   *[_id == "siteSettings"]{
     siteTitle,
@@ -27,6 +28,7 @@ const settingsQuery = `
   }[0]
 `;
 
+// Query: Hero section with video and poster
 const heroQuery = `
   *[_type == "hero"][0]{
     video {
@@ -43,9 +45,35 @@ const heroQuery = `
   }
 `;
 
+// Query: Intro section with asterisk and sections
+const introQuery = `
+  *[_type == "introSection"][0]{
+    asterisk,
+    section1{
+      title{ line1, line2 },
+      paragraph
+    },
+    section2{
+      title{ line1, line2 },
+      paragraph
+    },
+    section3{
+      title{ line1, line2 },
+      paragraph
+    },
+    section4{
+      title{ line1, line2 },
+      paragraph
+    }
+  }
+`;
+
+// Fetch data from Sanity
 const settings = await sanity.fetch(settingsQuery);
 const hero = await sanity.fetch(heroQuery);
+const intro = await sanity.fetch(introQuery);
 
+// Build page title and description
 const baseTitle = settings.siteTagline
   ? `${settings.siteTitle} | ${settings.siteTagline}`
   : settings.siteTitle;
@@ -99,7 +127,8 @@ import '../styles/global.scss';
   <main id="main-content">
     <h1 class="sr-only">{settings.siteTitle}</h1>
     <Hero hero={hero} />
-    <Intro />
+    <Intro config={intro} />
+
     <About /> 
     <Work />
     <Products />
