--- a/src/styles/scss/_intro.scss
+++ b/src/styles/scss/_intro.scss
@@ -93,6 +93,16 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center; 
+
+    p {   
+      width: 90%;
+      margin: 0 auto;
+
+      @media (min-width: $change-layout) {
+        width: 100%;
+        margin: 0;
+      }
+    }
   }
 }
 
